--- a/.github/workflows/PublishDocumentation.yml
+++ b/.github/workflows/PublishDocumentation.yml
@@ -1,8 +1,8 @@
 name: Publish Documentation
 
-on: 
-  release:
-    types: [published]
+on:
+  push:
+    branches: master
 
 jobs:
   deploy_docs:
