--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -1,6 +1,8 @@
 name: Unit Tests
 
 on: [push, pull_request]
+env:
+  DEVELOPER_DIR: /Applications/Xcode_11.4.1.app/Contents/Developer
 
 jobs:
   test:
